--- a/Vinter_Projektet/Vinter_Projektet.csproj
+++ b/Vinter_Projektet/Vinter_Projektet.csproj
@@ -4,6 +4,6 @@
 		<TargetFramework>net5.0</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Raylib-cs" Version="3.7.0.1"/>
+	  <PackageReference Include="Raylib-cs" Version="4.0.0-alpha.4" />
 	</ItemGroup>
 </Project>
